--- a/admin/src/assets/scss/_variables.scss
+++ b/admin/src/assets/scss/_variables.scss
@@ -89,3 +89,6 @@ $spinner-animation-speed: .75s;
 $spinner-width-sm:        1rem;
 $spinner-height-sm:       $spinner-width-sm;
 $spinner-border-width-sm: .2em;
+
+
+$theme-color:#4e73df;
