--- a/admin/src/assets/scss/_global.scss
+++ b/admin/src/assets/scss/_global.scss
@@ -100,3 +100,17 @@ a {
     }
   }
 }
+
+.loader{
+  width: 100%;
+  height: 350px;
+  position: relative;
+  img{
+    position: absolute;
+    @include center;
+  }
+}
+
+.soft-landing{
+  @include transition;
+}
