--- a/admin/src/assets/scss/sb-admin-2.scss
+++ b/admin/src/assets/scss/sb-admin-2.scss
@@ -6,6 +6,7 @@
 
 // Import Custom SB Admin 2 Mixins and Components
 @import "mixins.scss";
+@import "center.scss";
 @import "global.scss";
 @import "utilities.scss";
 
