--- a/admin/src/assets/scss/sb-admin-2.scss
+++ b/admin/src/assets/scss/sb-admin-2.scss
@@ -22,3 +22,5 @@
 @import "spinners.scss";
 @import "cartMenu.scss";
 @import "cartPadding.scss";
+@import "spacebetween.scss";
+@import "cartMargin.scss";
