--- a/admin/src/assets/css/styles.css
+++ b/admin/src/assets/css/styles.css
@@ -78,7 +78,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   margin-top: 0;
-  /* margin-bottom: 1rem; */
+  margin-bottom: 0rem!important;
 }
 
 abbr[title],
