--- a/admin/src/assets/scss/_cartMenu.scss
+++ b/admin/src/assets/scss/_cartMenu.scss
@@ -21,26 +21,8 @@
     font-weight: 700;
 }
   
-.justify-between{
-    justify-content: space-between;
-}
-  
-.items-center{
-    align-items: center;
-}
-.items-start {
-    align-items: flex-start;
-}
-  
 .flex{
     display: flex;
-}
-.flex-col {
-    flex-direction: column;
-}
-
-.flex-1 {
-    flex: 1 1;
 }
 
 .h-\[55vh\] {
@@ -49,6 +31,10 @@
 
 .h-\[95px\] {
     height: 95px;
+}
+
+.h-\[96\.8vh\] {
+    height: 96.8vh;
 }
 
 .h-\[150px\] {
@@ -91,10 +77,6 @@
     border-bottom-width: 2px;
 }
 
-.overflow-y-scroll {
-    overflow-y: scroll;
-}
-
 .gap-1 {
     gap: 0.25rem;
 }
@@ -110,32 +92,12 @@
     display: grid;
 }
 
-.overflow-hidden {
-    overflow: hidden;
-}
-
 .min-w-0 {
     min-width: 0px;
 }
 
-.flex-row-reverse {
-    flex-direction: row-reverse;
-}
-
-.z-0 {
-    z-index: 0;
-}
-
-.relative {
-    position: relative;
-}
-
 .border-r {
     border-right-width: 1px;
-}
-
-.overflow-y-auto {
-    overflow-y: auto;
 }
 
 .lg\:grid-cols-4 {
@@ -211,6 +173,11 @@ img, svg, video, canvas, audio, iframe, embed, object {
     line-height: 1rem;
 }
 
+.text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+}
+
 .font-normal {
     font-weight: 400;
 }
@@ -228,6 +195,11 @@ h1, h2, h3, h4, h5, h6 {
 .bg-black {
     --tw-bg-opacity: 1;
     background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-indigo-600 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(79 70 229 / var(--tw-bg-opacity));
 }
 
 .font-semibold {
@@ -342,10 +314,6 @@ blockquote, dl, dd, h1, h2, h3, h4, h5, h6, hr, figure, p, pre {
 
 .bottom-0 {
     bottom: 0px;
-}
-
-.absolute {
-    position: absolute;
 }
 
 .cursor-not-allowed {
@@ -467,6 +435,12 @@ blockquote, dl, dd, h1, h2, h3, h4, h5, h6, hr, figure, p, pre {
     margin-left: calc(0.75rem* calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem* var(--tw-space-x-reverse));
+    margin-left: calc(1rem* calc(1 - var(--tw-space-x-reverse)));
+}
+
 .divide-y{
     border-top-width: 1px;
     border-bottom-width: 0px;
@@ -500,6 +474,628 @@ ul {
     }
 }
 
+.inset-0 {
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.min-h-full {
+    min-height: 100%;
+}
+
+.shadow-xl {
+    --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-sm {
+    --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+    --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.bg-indigo-600 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(79 70 229 / var(--tw-bg-opacity));
+}
+
+.border-transparent {
+    border-color: transparent;
+}
+
+.border {
+    border-width: 1px;
+}
+
+.rounded-md {
+    border-radius: 0.375rem;
+}
+
+.rounded-\[5px\] {
+    border-radius: 5px;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.border-gray-200 {
+    --tw-border-opacity: 1;
+    border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-l {
+    border-left-width: 1px;
+}
+
+.border-t {
+    border-top-width: 1px;
+}
+
+.border-r {
+    border-right-width: 1px;
+}
+
+.text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+}
+
+.divide-gray-300 > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-opacity: 1;
+    border-color: rgb(209 213 219 / var(--tw-divide-opacity));
+}
+
+.divide-x > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-x-reverse: 0;
+    border-right-width: calc(1px* var(--tw-divide-x-reverse));
+    border-left-width: calc(1px* calc(1 - var(--tw-divide-x-reverse)));
+}
+
+.divide-y > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-y-reverse: 0;
+    border-top-width: calc(1px* calc(1 - var(--tw-divide-y-reverse)));
+    border-bottom-width: calc(1px* var(--tw-divide-y-reverse));
+}
+
+.leading-snug {
+    line-height: 1.375;
+}
+
+.items-start{
+	align-items: flex-start;
+}
+	
+.items-end{
+	align-items: flex-end;
+}
+	
+.items-center{
+	align-items: center;
+}
+	
+.items-baseline{
+	align-items: baseline;
+}
+	
+.items-stretch{
+	align-items: stretch;
+}
+
+.justify-normal{
+	justify-content: normal;
+}
+
+.justify-start{
+	justify-content: flex-start;
+}
+
+.justify-end{
+	justify-content: flex-end;
+}
+
+.justify-center{
+	justify-content: center;
+}
+
+.justify-between{
+	justify-content: space-between;
+}
+
+.justify-around{
+	justify-content: space-around;
+}
+
+.justify-evenly{
+	justify-content: space-evenly;
+}
+
+.justify-stretch{
+	justify-content: stretch;
+}
+
+.content-normal{
+	align-content: normal;
+}
+	
+.content-center{
+	align-content: center;
+}
+	
+.content-start{
+	align-content: flex-start;
+}
+	
+.content-end{
+	align-content: flex-end;
+}
+	
+.content-between{
+	align-content: space-between;
+}
+	
+.content-around{
+	align-content: space-around;
+}
+	
+.content-evenly{
+	align-content: space-evenly;
+}
+	
+.content-baseline{
+	align-content: baseline;
+}
+	
+.content-stretch{
+	align-content: stretch;
+}
+
+.flex-row{	
+	flex-direction: row;
+}
+
+.flex-row-reverse{
+	flex-direction: row-reverse;
+}
+	
+.flex-col{
+	flex-direction: column;
+}
+	
+.flex-col-reverse{
+	flex-direction: column-reverse;
+}
+	
+.flex-wrap{
+	flex-wrap: wrap;
+}
+	
+.flex-wrap-reverse{
+	flex-wrap: wrap-reverse;
+}
+	
+.flex-nowrap{
+	flex-wrap: nowrap;
+}
+	
+.flex-1{
+	flex: 1 1 0%;
+}
+	
+.flex-auto{
+	flex: 1 1 auto;
+}
+
+.flex-initial{
+	flex: 0 1 auto;
+}
+	
+.flex-none{
+	flex: none;
+}
+	
+.shrink{
+	flex-shrink: 1;
+}
+	
+.shrink-0{
+	flex-shrink: 0;
+}
+
+.z-0{
+	z-index: 0;
+}
+
+.z-10{
+	z-index: 10;
+}
+	
+.z-20{
+	z-index: 20;
+}
+	
+.z-30{
+	z-index: 30;
+}
+	
+.z-40{
+	z-index: 40;
+}
+	
+.z-50{
+	z-index: 50;
+}
+	
+.z-auto{
+	z-index: auto;
+}
+
+.static{
+	position: static;
+}
+	
+.fixed{
+	position: fixed;
+}
+	
+.absolute{
+	position: absolute;
+}
+
+.relative{
+	position: relative;
+}
+
+.sticky{
+	position: sticky;
+}
+
+.overscroll-auto{
+	overscroll-behavior: auto;
+}
+
+.overscroll-contain{
+	overscroll-behavior: contain;
+}
+
+.overscroll-none{
+	overscroll-behavior: none;
+}
+
+.overscroll-y-auto{
+	overscroll-behavior-y: auto;
+}
+
+.overscroll-y-contain{
+	overscroll-behavior-y: contain;
+}
+
+.overscroll-y-none{
+	overscroll-behavior-y: none;
+}
+
+.overscroll-x-auto{
+	overscroll-behavior-x: auto;
+}
+
+.overscroll-x-contain{
+	overscroll-behavior-x: contain;
+}
+
+.overscroll-x-none{
+	overscroll-behavior-x: none;
+}
+
+.overflow-auto{
+	overflow: auto;
+}
+
+.overflow-hidden{
+	overflow: hidden;
+}
+
+.overflow-clip{
+	overflow: clip;
+}
+
+.overflow-visible{
+	overflow: visible;
+}
+
+.overflow-scroll{
+	overflow: scroll;
+}
+
+.overflow-x-auto{
+	overflow-x: auto;
+}
+
+.overflow-y-auto{
+	overflow-y: auto;
+}
+
+.overflow-x-hidden{
+	overflow-x: hidden;
+}
+
+.overflow-y-hidden{
+	overflow-y: hidden;
+}
+
+.overflow-x-clip{
+	overflow-x: clip;
+}
+	
+.overflow-y-clip{
+	overflow-y: clip;
+}
+
+.overflow-x-visible{
+	overflow-x: visible;
+}
+
+.overflow-y-visible{
+	overflow-y: visible;
+}
+
+.overflow-x-scroll{
+	overflow-x: scroll;
+}
+
+.overflow-y-scroll{
+	overflow-y: scroll;
+}
+
+.object-contain{
+	object-fit: contain;
+}
+
+.object-cover{
+	object-fit: cover;
+}
+
+.object-fill{
+	object-fit: fill;
+}
+
+.object-none{
+	object-fit: none;
+}
+
+.object-scale-down{
+	object-fit: scale-down;
+}
+
+.object-bottom{
+	object-position: bottom;
+}
+
+.object-center{
+	object-position: center;
+}
+
+.object-left{
+	object-position: left;
+}
+
+.object-left-bottom{
+	object-position: left bottom;
+}
+
+.object-left-top{
+	object-position: left top;
+}
+
+.object-right{	
+	object-position: right;
+}
+
+.object-right-bottom{
+	object-position: right bottom;
+}
+	
+.object-right-top{
+	object-position: right top;
+}
+
+.object-top{
+	object-position: top;
+}
+
+.visible{
+	visibility: visible;
+}
+
+.invisible{
+	visibility: hidden;
+}
+
+.transition-none{
+	transition-property: none;
+}
+
+.transition-all{
+	transition-property: all;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
+}
+
+.transition{
+	transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
+}
+
+.transition-colors{
+	transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
+}
+
+.transition-opacity{
+	transition-property: opacity;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
+}
+
+.transition-shadow{
+	transition-property: box-shadow;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
+}
+
+.transition-transform{
+	transition-property: transform;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
+}
+
+.bg-opacity-0{
+	--tw-bg-opacity: 0;
+}
+	
+.bg-opacity-5{
+	--tw-bg-opacity: 0.05;
+}
+
+.bg-opacity-10{
+	--tw-bg-opacity: 0.1;
+}
+
+.bg-opacity-20{
+	--tw-bg-opacity: 0.2;
+}	
+	
+.bg-opacity-25{
+	--tw-bg-opacity: 0.25;
+}	
+	
+.bg-opacity-30{
+	--tw-bg-opacity: 0.3;
+}	
+	
+.bg-opacity-40{
+	--tw-bg-opacity: 0.4;
+}	
+	
+.bg-opacity-50{
+	--tw-bg-opacity: 0.5;
+}	
+	
+.bg-opacity-60{
+	--tw-bg-opacity: 0.6;
+}	
+	
+.bg-opacity-70{
+	--tw-bg-opacity: 0.7;
+}	
+	
+.bg-opacity-75{
+	--tw-bg-opacity: 0.75;
+}	
+	
+.bg-opacity-80{
+	--tw-bg-opacity: 0.8;
+}	
+	
+.bg-opacity-90{
+	--tw-bg-opacity: 0.9;
+}	
+	
+.bg-opacity-95{
+	--tw-bg-opacity: 0.95;
+}	
+	
+.bg-opacity-100{
+	--tw-bg-opacity: 1;
+}	
+
+.bg-gray-50{
+	background-color: rgb(249 250 251);
+}
+
+.bg-gray-100{
+	background-color: rgb(243 244 246);
+}
+
+.bg-gray-200{
+	background-color: rgb(229 231 235);
+}
+
+.bg-gray-300{
+	background-color: rgb(209 213 219);
+}
+
+.bg-gray-400{
+	background-color: rgb(156 163 175);
+}
+
+.bg-gray-500{
+	background-color: rgb(107 114 128);
+}
+
+.bg-gray-600{
+	background-color: rgb(75 85 99);
+}
+
+.bg-gray-700{
+	background-color: rgb(55 65 81);
+}
+
+.bg-gray-800{
+	background-color: rgb(31 41 55);
+}
+
+.bg-gray-900{
+	background-color: rgb(17 24 39);
+}
+
+.bg-gray-950{
+	background-color: rgb(3 7 18);
+}
+
+.tracking-tighter{
+	letter-spacing: -0.05em;
+}
+
+.tracking-tight{
+	letter-spacing: -0.025em;
+}
+
+.tracking-normal{
+	letter-spacing: 0em;
+}
+
+.tracking-wide{
+	letter-spacing: 0.025em;
+}
+
+.tracking-wider{
+	letter-spacing: 0.05em;
+}
+
+.tracking-widest{
+	letter-spacing: 0.1em;
+}
+
+.ticketLogo{
+    width: 35%;
+}
+
+.pedidosTable{
+    ul{
+        margin-bottom: 0!important;
+        padding-left: 0!important;
+    }
+}
+
 @media (min-width: 768px) {
     .md\:grid-cols-3 {
         grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -515,5 +1111,100 @@ ul {
 @media (min-width: 640px) {
     .sm\:flex {
         display: flex;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:p-0 {
+        padding: 0px;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:items-center {
+        align-items: center;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:p-6 {
+        padding: 1.5rem;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:max-w-sm {
+        max-width: 24rem;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:w-full {
+        width: 100%;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:my-8 {
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:text-sm {
+        font-size: 0.875rem;
+        line-height: 1.25rem;
+    }
+}
+
+@media (min-width: 1024px) {
+    .lg\:px-8 {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:px-6 {
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:flex-auto {
+        flex: 1 1 auto;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:flex-none {
+        flex: none;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:ml-16 {
+        margin-left: 4rem;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:mt-0 {
+        margin-top: 0px;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:w-auto {
+        width: auto;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:-mx-6 {
+        margin-left: -1.5rem;
+        margin-right: -1.5rem;
     }
 }
